# kcat_prediction_slim

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
kcat_prediction_slim/: default_path.py  feature_builders.py  hyperparameter.py  main.py  package_version.py  visualize_box.py  visualize_box_esm2.py  visualize_box_sensitivity.py
